# Chanakya-Local-Friend

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARTIFACTS_IMPLEMENTATION_PLAN.md  Dockerfile  LICENSE  LICENSE.md  PRD.md  README.md  RPD.md  chanakya.py  composer-state-fresh.json  composer-state.json  conversation_layer_v1_mod_porting_reference.md  conversation_layer_v2_mod_changes.md  index-snapshot.md  mcp_config_file.example.json  mcp_config_file.json  mcp_config_file.json.example  mobile-snapshot.md  prd-chanakya-full-system.md  pyproject.toml  requirements.txt  run_scenarios.py  task.md  tool_specific_instructions.txt  work-after-apply.md  work-final.md  work-page-after.md  work-page.md  work-sync.md  worker-mobile-before-open.md
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
AI-Router-AIR/: .env.example  .pre-commit-config.yaml  CHANGELOG.md  README.md  browser-snapshot.md  chanakya-home-snapshot.md  config.yaml  debug_proxy_hang.py  pyproject.toml  run.py  test_proxy.py
AI-Router-AIR/.agent/rules/: agent.md
AI-Router-AIR/.github/ISSUE_TEMPLATE/: blank_issue.yml
AI-Router-AIR/.github/workflows/: ci.yml  close-issues.yml  pre-commit.yml
AI-Router-AIR/.playwright-mcp/: page-2026-04-06T03-27-48-871Z.yml
AI-Router-AIR/client/: config.py  main.py
AI-Router-AIR/client/static/css/: style.css
AI-Router-AIR/client/static/js/: app.js
AI-Router-AIR/client/templates/client/: index.html
AI-Router-AIR/docs/: prd.md
AI-Router-AIR/litellm/: docker-compose.yml
AI-Router-AIR/scripts/: debug_conn.py
AI-Router-AIR/server/: main.py
AI-Router-AIR/server/api/: admin.py  health.py  router.py
AI-Router-AIR/server/api/v1/: audio.py  batches.py  chat.py  models.py  realtime.py  router.py
AI-Router-AIR/server/core/: config.py  dependencies.py  env_manager.py  exceptions.py  logging.py  proxy_engine.py
AI-Router-AIR/server/schemas/: provider_schema.py
AI-Router-AIR/server/services/: discovery.py  provider_manager.py
AI-Router-AIR/server/static/css/: style.css
AI-Router-AIR/server/static/js/: dashboard.js
AI-Router-AIR/server/templates/: api_status.html  dashboard.html
AI-Router-AIR/tests/: test_admin.py  test_api_endpoints.py  test_api_v1.py  test_core.py  test_health.py  test_html_routes.py  test_logging_setup.py  test_proxy_engine.py  test_proxy_engine_logging.py  test_services.py  test_streaming.py
apps/chanakya_conversation_layer/: .env.example  .gitignore  app.py  prd.md  prd_audit.md  pyproject.toml  start_stack.sh
apps/chanakya_conversation_layer/a2a_example_app/: README.md  opencode_a2a_bridge.py  requirements.txt  start_bridge.sh  start_opencode.sh  test_bridge.sh
apps/chanakya_conversation_layer/a2a_example_app/chatflash/: models.py
apps/chanakya_conversation_layer/app/: __init__.py
apps/chanakya_conversation_layer/app/templates/: index.html
apps/chanakya_conversation_layer/conversation_layer/: __init__.py  integration.py  logging_utils.py  schemas.py
apps/chanakya_conversation_layer/conversation_layer/services/: agent_interface.py  orchestration_agent.py  working_memory.py
apps/chanakya_conversation_layer/core_agent_app/: __init__.py  config.py
apps/chanakya_conversation_layer/core_agent_app/services/: opencode_discovery.py
apps/chanakya_conversation_layer/docs/: prompt_optimization_suggestions.md  slim_conversation_layer_prd.md  transcript_regression_hardening_tasks.md
apps/chanakya_conversation_layer/issues/: issue_2.md  issue_6.md
apps/chanakya_conversation_layer/tests/: test_a2a_adapter.py  test_backend_routing.py  test_core_agent.py  test_history_provider.py
artifacts/: events.jsonl  tasks.db
chanakya/: PROMPT_ANALYSIS_REPORT.md  README.md  WORKFLOW_ANALYSIS_REPORT.md  agent_manager.py  app.py  chat_service.py  config.py  conversation_layer_support.py  db.py  debug.py  domain.py  heartbeat.py  history_provider.py  maf_runtime.py  maf_workflows.py  mcp_runtime.py  model.py  models.py  seed.py  store.py  subagents.py
chanakya_app/: react_agent.py  routes.py  tool_loader.py
chanakya_conversation_layer/: .chanakya-opencode.pid  .gitignore  AGENT_INTEGRATION_REPORT.md  README.md  chanakya.db  start_stack.sh  stop_stack.sh  tasks.md  tasks_extended.md
chanakya_conversation_layer_new/: chanakya.db
chanakya_maf_mvp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
chanakya_mvp/: __init__.py  agents.py  chanakya.py  config.py  logging_utils.py  maf_runtime.py  manager.py  models.py  scenarios.py  store.py  tools.py
coqui_tts/: dockerfile  entrypoint.sh
docker/: chanakya-sandbox.Dockerfile
docs/: contributing.md  deployment.md  getting-started.md  good_first_issue.md  maf_capability_matrix.md  task_model.md  (+3 more)
(+290 files in other folders)
