[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "Chanakya"
version = "0.1.0"
description = "A fully local chatbot"
authors = [
    {name = "Rishabh Bajpai", email = "rishabhbajpai24@gmail.com"},
]
requires-python = ">=3.11"
dependencies = [
    "nest_asyncio>=1.6.0",
    "requests>=2.32.5",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask[async]>=3.1.3",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.11",
    "langchain>=1.2.12",
    "langchain-classic>=1.0.3",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-core>=1.2.19",
    "openai>=2.29.0",
    "pyOpenSSL>=26.0.0",
    "python-dotenv>=1.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-flask>=1.3.0",
    "ruff>=0.15.6",
    "pre-commit>=4.5.1",
    "interrogate>=1.7.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E402", "E501"]

[tool.interrogate]
ignore-init-module = true
ignore-init-method = true
ignore-module = true
ignore-nested-functions = true
ignore-magic = true
exclude = ["setup.py", "docs", "build", "tests", "third-party", "scripts"]
fail-under = 80
verbose = 2
