[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chanakya-conversation-layer"
version = "0.1.0"
description = "Conversation intelligence layer prototype with Flask wrapper orchestration"
requires-python = ">=3.11"
dependencies = [
  "agent-framework>=1.0.0rc5,<2",
  "agent-framework-a2a>=0.2.0,<2",
  "Flask>=3.1,<4",
  "openai>=2.11.0,<3",
  "python-dotenv>=1.2.1,<2",
  "redis>=6.0,<7",
  "SQLAlchemy>=2.0,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*", "conversation_layer*", "core_agent_app*", "a2a_example_app*"]
